force-app/main/default/objects/BGBL__Applied_Query__c/BGBL__Applied_Query__c.object-meta.xml
<CustomObject>
    <customHelp>MUSW__HelpInterface</customHelp>
    <description>Queries required by letter including any unique instructions eg. order, parent query and attach</description>
    <label>Letter Applied Query</label>
    <nameField>
        <displayFormat>AQ-{0000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applied Letter Queries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>