force-app/main/default/objects/BGBL__Applied_Query__c/fields/BGBL__Batch_Letter__c.field-meta.xml
<CustomField>
    <fullName>BGBL__Batch_Letter__c</fullName>
    <label>Letter</label>
    <referenceTo>BGBL__Batch_Letter__c</referenceTo>
    <relationshipLabel>Applied Letter Queries</relationshipLabel>
    <relationshipName>Applied_Queries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>