force-app/main/default/objects/BGBL__Applied_Query__c/fields/BGBL__Child_Iterate_Query__c.field-meta.xml
<CustomField>
    <fullName>BGBL__Child_Iterate_Query__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>if true, each record returned by this query will result in a letter copy</inlineHelpText>
    <label>Child Iterate Query</label>
    <type>Checkbox</type>
</CustomField>