force-app/main/default/objects/BGBL__Applied_Query__c/fields/BGBL__Execution_Order__c.field-meta.xml
<CustomField>
    <fullName>BGBL__Execution_Order__c</fullName>
    <label>Order</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>