force-app/main/default/objects/BGBL__Applied_Query__c/fields/BGBL__Object_Name_Alias__c.field-meta.xml
<CustomField>
    <fullName>BGBL__Object_Name_Alias__c</fullName>
    <inlineHelpText>Use when querying against the same object more than once.  For example, all Accounts are queried for address, but a specific Account is also queried to provide your organization's information for all letters (e.g., return address):  this field = "MyOrg"</inlineHelpText>
    <label>Object Name (Alias)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>