force-app/main/default/objects/BGBL__Applied_Query__c/fields/BGBL__Object_Name_Plural__c.field-meta.xml
<CustomField>
    <fullName>BGBL__Object_Name_Plural__c</fullName>
    <inlineHelpText>The parent's relationship name to this assigned query object. Ensure to include pre "MUSW__" and postfix "__r". eg. MUSW__listname__r.</inlineHelpText>
    <label>Object Name (Plural)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>