force-app/main/default/objects/BGBL__Applied_Query__c/fields/BGBL__Parent_Query__c.field-meta.xml
<CustomField>
    <fullName>BGBL__Parent_Query__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Query</label>
    <referenceTo>BGBL__Query__c</referenceTo>
    <relationshipName>Children_Queries</relationshipName>
    <type>Lookup</type>
</CustomField>