force-app/main/default/objects/BGBL__Applied_Query__c/validationRules/BGBL__Child_Iterate_Query_must_be_1.validationRule-meta.xml
<ValidationRule>
    <fullName>BGBL__Child_Iterate_Query_must_be_1</fullName>
    <active>true</active>
    <errorConditionFormula>AND(BGBL__Child_Iterate_Query__c ,  NOT(ISPICKVAL(BGBL__Execution_Order__c,'1') ))</errorConditionFormula>
    <errorMessage>Child Iterate Query must be specified as Order 1</errorMessage>
</ValidationRule>